	* Fix a crash when starting if you have a Zephyr account
	* Increase XMPP ping timeout to 120 seconds, to prevent poor network
	  connections from timing out unnecessarily.

	Pidgin:
	* Remove a workaround for older versions gstreamer that was causing
	  crashes on some non-Linux systems such as HPUX
	* Fix some cases of the conversation input entry area being 1 pixel high

	Finch:
	* Fix compiling with Glib older than 2.6
	* Ensure existing conversations selected from the 'Send IM' dialog are
	  given focus

version 2.4.0 (02/29/2008):
	http://developer.pidgin.im/query?status=closed&milestone=2.4.0

	libpurple:
	* Added support for offline messages for AIM accounts (thanks to
	  Matthew Goldstein)
	* Fixed various problems with loss of status messages when going
	  or returning from idle on MySpaceIM.
	* Eliminated unmaintained Howl backend implementation for the
	  Bonjour protocol.  Avahi (or Apple's Bonjour runtime on win32) is
	  now required to use Bonjour.
	* Partial support for viewing ICQ status notes (Collin from
	  ComBOTS GmbH).
	* Support for /notice on IRC.
	* Support for Yahoo! Messenger 7.0+ file transfer method (Thanumalayan S.)
	* Support for retrieving full names and addresses from the address book
	  on Yahoo! Japan (Yusuke Odate)
	* The AIM/ICQ server-side preference for "allow others to see me
	  as idle" is no longer unconditionally set to "yes" even when
	  your libpurple preference is "no."
	* Fix SSL certificate checks for renewed certificates
	* Fix the ability to set vCard buddy icons on Google Talk/XMPP
	* D-Bus fixes on 64bit
	* Fixed retrieval of buddy icons and setting of server-side aliases on
	  Yahoo! and Yahoo! Japan when using an HTTP proxy server (Gideon N.
	  Guillen)
	* Fixed an MSN bug that would leave you appearing offline when transferred
	  to different server

	Pidgin:
	* Added the ability to theme conversation name colors (red and blue)
	  through your GTK+ theme, and exposed those theme settings to the